# rack-daemon

./: .gitignore  CMakeLists.txt  Makefile  README.md  config-sample.json  door.sqlite  ds.py  fans.mode  fc.py.20201230  fc.py.20210108  fc.py.20210117  fc.py.20210127  rm.py  users-sample.json
c/: Makefile  main.c  main.out  test.c  test.out  test.py
cmake/: compiler-flags.cmake
py/emailer/: README.md
src/: 7seg.c  Makefile  cam.cpp  cam.h  main.c  ocv.c  rm.c
src/back/: 7seg.c  7seg_display.c  7seg_display.h  CMakeLists.txt  cam.cpp  database.c  database.h  event_loops.c  event_loops.h  global_vars.h  http_service.c  http_service.h  http_service_application.c  http_service_application.h  http_service_webapi.c  http_service_webapi.h  main.c  rd.c  rm.c  sensors.c  sensors.h  utils.c  utils.h
src/back/http_service/: CMakeLists.txt  ErrorHandler.hpp  HttpService.cpp  HttpService.h  SwaggerComponent.hpp
src/back/http_service/controller/: SwaggerController.hpp
src/back/http_service/dto/: InternalStateDto.hpp
src/front/: babelify.js  configs-sample.js  package-lock.json  package.json  rd.js  rm.js  rm.py  settings-sample.json
src/front/emailer/: emailer.py
src/front/private/: index.js
src/front/public/html/: index.html
src/front/public/js/: index.js
src/front/templates/: login.html
static/css/libs/w3css/: w3-colors-2017.css
templates/: console.html.bak  index.html  index.html.20210108  login.html
